--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 }
 </style>
 <canvas id=c width=16 height=16></canvas>
-<script src=imtxt.js></script>
-<script src=sprites/_gen_meta.js></script>
+<script src=gen/sprites_ascii.js></script>
+<script src=gen/sprites_meta.js></script>
 <script src=game.js></script>
